Remove classes DTO desnecessárias para criação de conta e ajusta estrutura de nomenclatura em classes existentes. Atualiza caminhos de API para `/api/v1/`.